--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="menu">
           <a
-            href="https://discord.gg/A9CnsVzzkZ"
+            href="https://discord.gg/"
             target="_blank"
             rel="noopener noreferrer"
           >
@@ -37,7 +37,7 @@
             <img src="images/header/twitter.webp" alt="Twitter" />
           </a>
           <a
-            href="https://opensea.io/collection/codecats"
+            href="https://opensea.io/collection/"
             target="_blank"
             rel="noopener noreferrer"
           >
@@ -81,7 +81,7 @@
         <h1>Don't cry over spilled milk, w33bs!</h1>
                
         <p>Super KAWAII Animae girls are coming to the rescue</p>
-        <a href="https://discord.gg/A9CnsVzzkZ" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
+        <a href="https://discord.gg/" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
           ><span>Join to meet your future WIFU</span>
         </a>
       </div>
